# ceph-ci

./: .gitmodules  CMakeLists.txt  COPYING  PendingReleaseNotes  README.md  ceph.spec.in  do_freebsd.sh  install-deps.sh  make-apk.sh  make-dist  pom.xml  run-make-check.sh
alpine/: APKBUILD.in
cmake/modules/: BuildBoost.cmake  Findfuse.cmake
debian/: ceph-base.install  ceph-daemon.postinst  ceph-daemon.postrm  ceph-mgr-modules-core.install  ceph-mgr-orchestrator.install  ceph-mgr-rook.install  ceph-mgr.install  ceph-osd.install  control  rules
doc/cephadm/: adoption.rst  drivegroups.rst  index.rst  install.rst  monitoring.rst  troubleshooting.rst
doc/cephfs/: fs-volumes.rst
doc/dev/: cephfs-mirroring.rst  cephx.rst  cephx_protocol.rst  kubernetes.rst  mon-elections.rst  mon-osdmap-prune.rst  msgr2.rst  release-checklists.rst  release-kickoff-checklist.rst
doc/install/: manual-deployment.rst
doc/mgr/: cephadm.rst  crash.rst  diskprediction.rst  hello.rst  index.rst  modules.rst  orchestrator.rst  orchestrator_modules.rst  osd_support.rst  telemetry.rst
doc/radosgw/: adminops.rst  cloud-sync-module.rst  config-ref.rst  index.rst  notifications.rst  pubsub-module.rst  vault.rst
doc/rbd/: rbd-config-ref.rst
qa/: tox.ini  valgrind.supp
src/: CMakeLists.txt  ceph-daemon  ceph.in  ceph_fuse.cc  ceph_mds.cc  ceph_mgr.cc  ceph_mon.cc  ceph_osd.cc  ceph_syn.cc  libcephfs.cc  librados-config.cc  logrotate.conf  mrgw.sh  stop.sh  valgrind.supp  vstart.sh
src/test/cls_version/: CMakeLists.txt
src/test/crimson/: CMakeLists.txt  test_async_echo.cc
(+1442 files in other folders)
